# keyrack

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-HEADER.txt  MIGRATION.md  QUICKSTART.md  README.md  docker-compose.yml
.githooks/: pre-commit
.github/workflows/: ci.yml  demo-pr.yml  docker.yml  e2e.yml  name-scan.yml  release-pr.yml  release.yml
LICENSES/: Apache-2.0.txt  BSL-1.1.txt
config/: config.yaml
crates/keyrack/: Cargo.toml
crates/keyrack-aws-common/: Cargo.toml
crates/keyrack-aws-common/src/: lib.rs
crates/keyrack-aws-proxy/: Cargo.toml
crates/keyrack-aws-proxy/src/: aws_backend.rs  lib.rs  main.rs
crates/keyrack-cedar-pdp/: Cargo.toml
crates/keyrack-cedar-pdp/src/: engine.rs  lib.rs  main.rs  server.rs
crates/keyrack-cli/: Cargo.toml
crates/keyrack-cli/src/: admin.rs  audit.rs  lib.rs  lint.rs  main.rs  migrate.rs  provision.rs  routing.rs
crates/keyrack-core/: Cargo.toml
crates/keyrack-core/benches/: resolve.rs
crates/keyrack-core/src/: attr.rs  audit.rs  authn.rs  canon.rs  cascade.rs  encryption_context.rs  error.rs  header.rs  hsm.rs  kani_proofs.rs  key.rs  lib.rs  lid.rs  lint.rs  migration.rs  pdp.rs  provider.rs  provisioner.rs  registry.rs  resolver.rs  rotation.rs  routing.rs  rule.rs  secret.rs  sensitive.rs  storage.rs  tags.rs
crates/keyrack-core/src/provider/: inmem.rs  software.rs
crates/keyrack-core/tests/: e2e_smoke.rs  formal_invariants.rs  property_tests.rs
crates/keyrack-e2e/: Cargo.toml  build.rs
crates/keyrack-e2e/src/: main.rs
crates/keyrack-ha/: Cargo.toml
crates/keyrack-ha/src/: cluster.rs  election.rs  health.rs  lib.rs  replication.rs
crates/keyrack-kmip/: Cargo.toml
crates/keyrack-kmip/src/: connection.rs  lib.rs  messages.rs  provider.rs  ttlv.rs
crates/keyrack-nats/: Cargo.toml
crates/keyrack-nats/src/: lib.rs
crates/keyrack-parsec/: Cargo.toml
crates/keyrack-parsec/src/: lib.rs
crates/keyrack-pii/: Cargo.toml
crates/keyrack-pii/src/: lib.rs  preset.rs  tokenizer.rs
crates/keyrack-pkcs11/: Cargo.toml
crates/keyrack-pkcs11/src/: ecdsa_der.rs  lib.rs  provider.rs
crates/keyrack-pkcs11/tests/: conformance.rs
crates/keyrack-pool/: Cargo.toml
crates/keyrack-pool/src/: config.rs  lib.rs  metrics.rs  pool.rs
crates/keyrack-postgres/: Cargo.toml
crates/keyrack-postgres/src/: lib.rs
crates/keyrack-postgres/tests/: conformance.rs
crates/keyrack-service/: Cargo.toml  build.rs
crates/keyrack-service/benches/: service_ops.rs
crates/keyrack-service/src/: cache.rs  cert_reload.rs  config.rs  convert.rs  domain.rs  grpc.rs  hsm_registration.rs  lib.rs  main.rs  metrics.rs  ops.rs  pdp_grpc.rs  pdp_http.rs  rest.rs  routing.rs  secret_ref.rs  state.rs  workers.rs
crates/keyrack-service/tests/: integration.rs
crates/keyrack-sqlite/: Cargo.toml
crates/keyrack-sqlite/src/: lib.rs
crates/keyrack-test-support/: Cargo.toml
crates/keyrack-test-support/src/: conformance.rs  fixtures.rs  lib.rs  service_conformance.rs
crates/keyrack-vault/: Cargo.toml
crates/keyrack-vault/src/: lib.rs
crates/keyrack-wasm/: Cargo.toml  README.md  build.sh  keyrack-wasm.d.ts
crates/keyrack-wasm/src/: lib.rs
crates/keyrack/src/: lib.rs
demos/01-foss-vault/: README.md  docker-compose.yml
demos/01-foss-vault/config/: keyrack.yaml
demos/01-foss-vault/scripts/: run-demo.sh
demos/02-foss-softhsm/: Dockerfile  README.md  docker-compose.yml
demos/02-foss-softhsm/config/: keyrack.yaml
demos/02-foss-softhsm/scripts/: run-demo.sh
demos/04-hyok-full-stack/: Dockerfile.demo  Dockerfile.keyrack  README.md  docker-compose.yml
demos/04-hyok-full-stack/config/: cedar-policy.cedar  keyrack.yaml
demos/04-hyok-full-stack/jwt-issuer/: Dockerfile  app.py  requirements.txt
demos/04-hyok-full-stack/scripts/: disconnect-demo.sh  restart-survival.sh  run-demo.sh
demos/06-provider-routing/: Dockerfile  README.md  docker-compose.yml
demos/06-provider-routing/config/: keyrack.yaml
demos/06-provider-routing/scripts/: run-demo.sh
demos/07-k8s-sidecar/: README.md  run-demo.sh
demos/07-k8s-sidecar/manifests/: 00-namespace.yaml  10-config.yaml  20-postgres.yaml  30-cedar-pdp.yaml  40-app-pod.yaml
demos/08-cascade-rotation/: Dockerfile.demo  README.md  docker-compose.yml
demos/08-cascade-rotation/config/: keyrack.yaml
demos/08-cascade-rotation/scripts/: run-demo.sh
demos/09-audit-tamper-evidence/: Dockerfile.keyrack  README.md  docker-compose.yml
demos/09-audit-tamper-evidence/config/: keyrack.yaml
demos/09-audit-tamper-evidence/scripts/: run-demo.sh
demos/10-mtls-identity/: Dockerfile.certgen  Dockerfile.demo  README.md  docker-compose.yml
demos/11-multi-tenant-hyok/: Dockerfile.demo  Dockerfile.keyrack  README.md  docker-compose.yml
docker/: Dockerfile.e2e  Dockerfile.service
docker/config/: cedar-policy.cedar  keyrack.yaml  namespaces.yaml
docs/: ARCHITECTURE.md  CEDAR_STARTER_SCHEMA.md  CRYPTO_AND_COMPLIANCE_ANALYSIS.md  DEVELOPER.md  FORMAL_VERIFICATION.md  INTEGRATION_GUIDE.md  IOT_GATEWAY_QUICKSTART.md  KEY_RESOLUTION.md  KEY_ROTATION.md  LANGUAGE_SUPPORT.md  OPERATOR.md  PDP_ACTION_CROSSREF.md  PRODUCT_OVERVIEW.md  RELEASING.md  SECURITY.md  SPEC.md  WHY_KEYRACK.md
docs/compliance/: COMPLIANCE_POSTURE.md  CRYPTO_SECURITY_MODEL.md
docs/sdk-examples/: README.md  c.md  go.md  java.md  python.md  rust.md  typescript.md
docs/use-cases/: 01-greenfield-rust-backend.md  02-typescript-frontend.md  03-go-services.md  04-c-cpp-embedded.md  05-python-services.md  06-brownfield-migration.md  07-crypto-agility.md  README.md
examples/: Cargo.toml  quickstart.sh
examples/api-sketches/: README.md  app_example.ts
examples/browser-wasm/: index.html
examples/iot-sensor/: sensor.py
examples/multi-tenant/: main.rs
examples/single-tenant/: main.rs
examples/webapp/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_canonicalize.rs  fuzz_header_parse.rs  fuzz_rule_parser.rs
scripts/: e2e-docker.sh  e2e-smoke.sh  install-hooks.sh  run-demos-ci.sh
site/: index.html
src/: README.md  app_example.rs
(+17 files in other folders)
