[workspace]
resolver = "2"
members = [
    "crates/keyrack-core",
    "crates/keyrack-pkcs11",
    "crates/keyrack-kmip",
    "crates/keyrack-postgres",
    "crates/keyrack-sqlite",
    "crates/keyrack-nats",
    "crates/keyrack-test-support",
    "crates/keyrack-service",
    "crates/keyrack-cedar-pdp",
    "crates/keyrack-cli",
    "crates/keyrack-wasm",
    "crates/keyrack-pii",
    "crates/keyrack-aws-common",
    "crates/keyrack-aws-proxy",
    "crates/keyrack",
    "crates/keyrack-parsec",
    "crates/keyrack-vault",
    "crates/keyrack-e2e",
    "examples",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Keyrack-io/keyrack"

[workspace.dependencies]
# Shared versions pinned here; crates reference via { workspace = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
tokio-util = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Auth
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Testing
proptest = "1"

base64 = "0.22"

# Internal crates
keyrack-core = { path = "crates/keyrack-core" }
keyrack-vault = { path = "crates/keyrack-vault" }
keyrack-pkcs11 = { path = "crates/keyrack-pkcs11" }
keyrack-kmip = { path = "crates/keyrack-kmip" }
keyrack-postgres = { path = "crates/keyrack-postgres" }
keyrack-sqlite = { path = "crates/keyrack-sqlite" }
keyrack-nats = { path = "crates/keyrack-nats" }
keyrack-test-support = { path = "crates/keyrack-test-support" }
keyrack-service = { path = "crates/keyrack-service" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
