[package]
name = "keyrack-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
keyrack-core = { path = "../crates/keyrack-core" }
serde_json = "1"

[[bin]]
name = "fuzz_rule_parser"
path = "fuzz_targets/fuzz_rule_parser.rs"
doc = false

[[bin]]
name = "fuzz_canonicalize"
path = "fuzz_targets/fuzz_canonicalize.rs"
doc = false

[[bin]]
name = "fuzz_header_parse"
path = "fuzz_targets/fuzz_header_parse.rs"
doc = false
