[package]
name = "keyrack-cedar-pdp"
version = "0.1.0"
description = "Standalone Cedar PDP service for KeyRack (Workstream 2)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }

[lints]
workspace = true
