[package]
name = "keyrack-cedar-pdp"
version = "0.3.1"
description = "Standalone Cedar PDP service for KeyRack (Workstream 2)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keyrack-cedar-pdp"
path = "src/main.rs"

[dependencies]
keyrack-core = { workspace = true }
cedar-policy = "4"
axum = "0.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

[lints]
workspace = true
