[package]
name = "keyrack-cli"
version = "0.1.0"
description = "KeyRack CLI tools: lint, provision, migrate, admin (Workstream 3)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }

[lints]
workspace = true
