[package]
name = "keyrack-core"
version = "0.1.0"
description = "KeyRack core library: types, traits, canonicalization, LID, rule engine, resolver"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
unicode-normalization = "0.1"
zeroize = { version = "1", features = ["derive"] }

# Crypto primitives for software/in-memory providers
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
