[package]
name = "keyrack-core"
version = "0.1.0"
description = "KeyRack core library: types, traits, canonicalization, LID, rule engine, resolver"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
unicode-normalization = "0.1"
zeroize = { version = "1", features = ["derive"] }

# YAML parsing for rule/namespace config
serde_yaml = "0.9"

# Crypto primitives for software/in-memory providers
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"
subtle = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "resolve"
harness = false

[lints]
workspace = true
