[package]
name = "keyrack-e2e"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "E2E test + demo binary for KeyRack — exercises gRPC and REST from the outside"
publish = false

[[bin]]
name = "keyrack-e2e"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
