[package]
name = "keyrack-kmip"
version = "0.3.2"
description = "KeyRack KMIP client provider for HYOK and external HSMs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"

[dev-dependencies]
keyrack-test-support = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
