[package]
name = "keyrack-nats"
version = "0.3.0"
description = "KeyRack NATS audit sink and event publisher"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-nats = "0.38"

[dev-dependencies]
keyrack-test-support = { workspace = true }

[lints]
workspace = true
