[package]
name = "keyrack-pii"
version = "0.1.0"
description = "KeyRack PII tokenization helper (Workstream 5)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
