[package]
name = "keyrack-pkcs11"
version = "0.1.0"
description = "KeyRack PKCS#11 provider for hardware HSMs"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
keyrack-test-support = { workspace = true }

[lints]
workspace = true
