[package]
name = "keyrack-pool"
version = "0.1.0"
description = "Asymmetric key pre-generation pool for KeyRack: burst handling, refill watcher"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
