[package]
name = "keyrack-postgres"
version = "0.3.1"
description = "KeyRack PostgreSQL storage backend with optimistic concurrency"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
live-tests = []

[dependencies]
keyrack-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

[dev-dependencies]
keyrack-test-support = { workspace = true }

[lints]
workspace = true
