[package]
name = "keyrack-service"
version = "0.1.0"
description = "KeyRack gRPC + REST service binary (Workstream 2)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keyrack-service"
path = "src/main.rs"

[dependencies]
keyrack-core = { workspace = true }
keyrack-sqlite = { workspace = true }
keyrack-postgres = { workspace = true }
keyrack-nats = { workspace = true }
keyrack-pkcs11 = { workspace = true }
keyrack-kmip = { workspace = true }

tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
base64 = "0.22"

[dev-dependencies]
keyrack-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
