[package]
name = "keyrack-service"
version = "0.3.1"
description = "KeyRack gRPC + REST service binary (Workstream 2)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "keyrack-service"
path = "src/main.rs"

[features]
default = ["crypto-endpoints"]
crypto-endpoints = []

[dependencies]
keyrack-core = { workspace = true }
keyrack-sqlite = { workspace = true }
keyrack-postgres = { workspace = true }
keyrack-nats = { workspace = true }
keyrack-pkcs11 = { workspace = true }
keyrack-kmip = { workspace = true }
keyrack-vault = { workspace = true }

tonic = { version = "0.12", features = ["tls"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
prost = "0.13"
prost-types = "0.13"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
base64 = "0.22"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio-util = { workspace = true }
moka = { version = "0.12", features = ["future"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
keyrack-test-support = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rcgen = "0.14.7"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
tokio-stream = { version = "0.1.18", features = ["net"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[[bench]]
name = "service_ops"
harness = false

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
