[package]
name = "keyrack-sqlite"
version = "0.3.1"
description = "KeyRack SQLite storage backend for single-node deployments"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
keyrack-test-support = { workspace = true }

[lints]
workspace = true
