[package]
name = "keyrack-test-support"
version = "0.3.1"
description = "Shared test fixtures and conformance harness scaffolding for KeyRack"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }
keyrack-service = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
uuid = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
