[package]
name = "keyrack-vault"
version = "0.3.2"
description = "KeyRack crypto provider for HashiCorp Vault Transit secrets engine"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
keyrack-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
rsa = { version = "0.9", features = ["sha2"] }
aes-kw = "0.2"
rand = "0.8"
sha2 = "0.10"
zeroize = "1"

[lints]
workspace = true
