[package]
name = "keyrack-wasm"
version = "0.1.0"
description = "KeyRack WASM target + JS/TS bindings (Workstream 4)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
keyrack-core = { workspace = true }

[lints]
workspace = true
