[package]
name = "keyrack"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-level Rust client library for KeyRack KMS"

[dependencies]
keyrack-core = { path = "../keyrack-core" }
tonic = "0.13"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
